[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physiology_analysis_tools"
dynamic = [
  "version",
]
dependencies = [
  "adi-reader",
  "numpy",
  "pandas",
  "PySide6",
  "pyqtgraph",
  "scipy",
  "scikit-learn",
  "XlsxWriter"
]

requires-python = ">= 3.9"
maintainers = [
  {name = "Chris Ward", email = "ward.chris.s@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ecg","arrhythmia"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]


[project.urls]
Repository = "https://github.com/realchrisward/Physiology-Analysis-Tools"

[tool.hatch.version]
path = "src/physiology_analysis_tools/main.py"
